; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_apply.c_progress_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_apply.c_progress_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @progress_cb(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to i64*
  store i64* %7, i64** %5, align 8
  %8 = load i64*, i64** %5, align 8
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %9, 1
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @cl_assert_equal_i(i64 %10, i64 %11)
  %13 = load i64, i64* %3, align 8
  %14 = load i64*, i64** %5, align 8
  store i64 %13, i64* %14, align 8
  ret i32 0
}

declare dso_local i32 @cl_assert_equal_i(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
